# verified-storage

./: .gitignore  README.md  experiments.md  run_ycsb.sh  tasks.md
artifact_eval/experiment/verif-storage-eval/: Cargo.toml  build.rs
artifact_eval/experiment/verif-storage-eval/src/: log.rs  main.rs  multilog.rs  pmdk_log.rs  verif_log.rs
capybaraKV/capybarakv/: .gitignore  Cargo.toml  README.md  build.rs  rust-toolchain.toml
capybaraKV/capybarakv/src/: count_capybarakv_lines.py  lib.rs  testkv_v.rs  verify-ae.sh
capybaraKV/capybarakv/src/common/: align_v.rs  recover_v.rs  saturate_v.rs  subrange_v.rs  table_v.rs  util_v.rs
capybaraKV/capybarakv/src/journal/: commit_v.rs  entry_v.rs  impl_v.rs  inv_v.rs  recover_v.rs  setup_v.rs  spec_v.rs  start_v.rs  write_v.rs
capybaraKV/capybarakv/src/kv2/: README.md  abort_v.rs  commit_v.rs  concurrentspec_t.rs  crud_v.rs  elements_v.rs  impl_t.rs  impl_v.rs  inv_v.rs  recover_v.rs  rwkv_t.rs  rwkv_v.rs  rwlock_t.rs  setup_v.rs  shardkv_t.rs  shardkv_v.rs  slots_v.rs  spec_t.rs  start_v.rs  util_v.rs
capybaraKV/capybarakv/src/pmem/: crc_t.rs  linux_pmemfile_t.rs  mmap_pmemfile_t.rs  mod.rs  pmcopy_t.rs  pmem_async_spec_t.rs  pmemmock_t.rs  pmemspec_t.rs  pmemutil_v.rs  power_sound_t.rs  power_t.rs  power_v.rs  subregion_v.rs  traits_t.rs  windows_pmemfile_t.rs
deps_hack/: Cargo.toml  build.rs  wrapper.h
deps_hack/src/: bindings.rs  lib.rs
evaluation/benchmark/: Cargo.toml  build.rs  capybarakv_config.toml  rust-toolchain.toml  wrapper.h
evaluation/benchmark/src/: capybarakv_client.rs  config.rs  kv_interface.rs  main.rs  old_capybarakv_client.rs  redis_client.rs  rocksdb_client.rs  sharded_capybarakv_client.rs  test.rs  viper_client.rs
evaluation/capybarakv_interface/: Cargo.toml  build.rs  config.toml  wrapper.h
evaluation/capybarakv_interface/src/: bindings.rs  capybarakv_interface.rs  lib.rs  microbenchmarks.rs
evaluation/ycsb_ffi/: Cargo.toml  rust-toolchain.toml  trace.fxt.old
evaluation/ycsb_ffi/src/: lib.rs
multilog/: .gitignore  Cargo.toml  README.md
multilog/deps_hack/: Cargo.toml
multilog/deps_hack/src/: lib.rs
multilog/multilog/: Cargo.toml  rust-toolchain.toml  wrapper.h
multilog/multilog/src/: lib.rs  util_v.rs  verify.sh
multilog/multilog/src/multilog/: append_v.rs  inv_v.rs  layout_v.rs  mod.rs  multilogimpl_t.rs  setup_v.rs  (+4 more)
multilog/pmsafe/src/: lib.rs  pmsafe_macros.rs
multilog/src/: append_v.rs  inv_v.rs  layout_v.rs  lib.rs  logimpl_v.rs  math.rs  math_v.rs  multilogimpl_t.rs  multilogimpl_v.rs  pmemfile_t.rs  pmemmock_t.rs  pmemspec_t.rs  pmemutil_v.rs  setup_v.rs  start_v.rs
pmemlog/: Cargo.toml  README.md  rust-toolchain.toml
pmemlog/src/: infinitelog_t.rs  lib.rs  logimpl_v.rs  main.rs  main_t.rs  math.rs  math_v.rs  multilog_t.rs  multilog_v.rs  pmemmock_t.rs  pmemspec_t.rs  sccf.rs
storage_node/: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
storage_node/src/: count_capybarakv_lines.py  lib.d  lib.long-type-18035409574534929516.txt  lib.rs  line_count.txt  macro_output.txt  testkv_v.rs  util_v.rs  verif_output.txt  verify-ae.sh  verify.sh
storage_node/src/bytes_multilog/: README.md  append_v.rs  inv_v.rs  layout_v.rs  mod.rs  multilogimpl_t.rs  multilogimpl_v.rs  setup_v.rs  start_v.rs
storage_node/src/common/: align_v.rs  mod.rs  nonlinear_v.rs  overflow_v.rs  recover_v.rs  saturate_v.rs  subrange_v.rs  table_v.rs  util_v.rs
storage_node/src/durablelist/: durablelistimpl_v.rs  durablelistspec_t.rs  mod.rs
storage_node/src/itemtable/: itemtableimpl_v.rs  itemtablespec_t.rs  layout_v.rs  mod.rs
storage_node/src/journal/: commit_v.rs  entry_v.rs  impl_v.rs  internal_v.rs  inv_v.rs  journal_v.rs  layout_v.rs  mod.rs  read_v.rs  recover_v.rs  setup_v.rs  spec_v.rs  start_v.rs  util_v.rs  write_v.rs
storage_node/src/kv/: inv_v.rs  kvimpl_t.rs  kvimpl_v.rs  kvspec_t.rs  layout_v.rs  mod.rs  setup_v.rs
storage_node/src/kv2/: abort_v.rs  commit_v.rs  concurrentspec_t.rs  crashinv_t.rs  crud_v.rs  elements_v.rs  impl_t.rs  impl_v.rs  inv_v.rs  kvimpl_t.rs  kvimpl_v.rs  kvrecover_v.rs  kvsetup_v.rs  kvshared_v.rs  kvspec_t.rs  kvstart_v.rs  mod.rs  recover_v.rs  rwinvkv_t.rs  rwinvkv_v.rs  rwkv_inv_v.rs  rwkv_t.rs  rwkv_v.rs  rwlock_t.rs  setup_v.rs  shardkv_t.rs  shardkv_v.rs  slots_v.rs  spec_t.rs  start_v.rs  util_v.rs
storage_node/src/kv_old/: kvimpl_t.rs  kvspec_t.rs
storage_node/src/log/: README.md  append_v.rs  inv_v.rs  layout_v.rs  logimpl_t.rs  logimpl_v.rs  logspec_t.rs  mod.rs  setup_v.rs  start_v.rs
storage_node/src/log2/: append_v.rs  inv_v.rs  layout_v.rs  logimpl_v.rs  logspec_t.rs  mod.rs  setup_v.rs  start_v.rs
storage_node/src/multilog/: README.md  append_v.rs  inv_v.rs  layout_v.rs  lib.rs  math_v.rs  mod.rs  multilogimpl_t.rs  multilogimpl_v.rs  multilogspec_t.rs  setup_v.rs  start_v.rs
storage_node/src/multilog2/: .gitignore  abort_v.rs  commit_v.rs  impl_t.rs  impl_v.rs  inv_v.rs  mod.rs  recover_v.rs  setup_v.rs  spec_t.rs  start_v.rs
storage_node/src/paged_kv/: interface_t.rs  mod.rs  pagedkvimpl_t.rs  pagedkvimpl_v.rs  pagedkvspec_t.rs
storage_node/src/pmem/: crc_t.rs  device_t.rs  ext4_pmemfile_t.rs  frac_v.rs  hamming_t.rs  hamming_v.rs  linux_pmemfile_t.rs  logatom_v.rs  macos_pmemfile_t.rs  markers.rs  markers_t.rs  mmap_pmemfile_t.rs  mod.rs  pmcopy_t.rs  pmem_async_equiv_t.rs  pmem_async_equiv_v.rs  pmemfile_t.rs  pmemmock_t.rs  pmemspec_logatom_t.rs  pmemspec_t.rs  pmemutil_v.rs  power_sound_t.rs  power_t.rs  power_v.rs  serialization_t.rs  serializedpmemspec_t.rs  subregion_v.rs  timestamp_t.rs  traits_t.rs  windows_pmemfile_t.rs  wrpm_t.rs  wrpm_v.rs
storage_node/src/singlelog/: append_v.rs  inv_v.rs  layout_v.rs  mod.rs  setup_v.rs  singlelogimpl_t.rs  singlelogimpl_v.rs  singlelogspec_t.rs
storage_node/src/singlelog_old/: append_v.rs  inv_v.rs  layout_v.rs  setup_v.rs  singlelogimpl_v.rs  start_v.rs
unverified/metadata_kv/: Cargo.toml
unverified/metadata_kv/src/: main.rs  metadata_kv.rs  tiering_engine.rs  tiering_engine_proptest.rs
vrsml/deps_hack/: Cargo.toml
vrsml/deps_hack/src/: lib.rs
(+5310 files in other folders)
