[package]
name = "deps_hack"
version = "0.1.0"
edition = "2021"

[features]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc64fast = "1.0.0"
rand = "0.8.5"
winapi = { version = "0.3.9", features = ["errhandlingapi", "fileapi", "handleapi", "memoryapi", "winbase", "winerror", "winnt"] }
nix = "0.27.1"

[build-dependencies]
bindgen = "0.69.1"