[package]
name = "multilog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
builtin_macros = { git = "https://github.com/verus-lang/verus.git", rev="f16f5fadbfbb08cf34b37acc533d04855e053918" }
builtin = { git = "https://github.com/verus-lang/verus.git", rev="f16f5fadbfbb08cf34b37acc533d04855e053918" }
vstd = { git = "https://github.com/verus-lang/verus.git", rev="f16f5fadbfbb08cf34b37acc533d04855e053918" }
deps_hack = { path = "../deps_hack" }

[package.metadata.verus.ide]
extra_args = "--crate-type=lib --expand-errors -L dependency=../deps_hack/target/debug/deps -L dependency=../deps_hack/target/debug/deps --extern=deps_hack=../deps_hack/target/debug/libdeps_hack.rlib"
