[package]
name = "multilog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
builtin_macros = { git = "https://github.com/verus-lang/verus.git", rev="f1040e17a5a5e5ab819083fb673e7e8abd37c00a" }
builtin = { git = "https://github.com/verus-lang/verus.git", rev="f1040e17a5a5e5ab819083fb673e7e8abd37c00a" }
vstd = { git = "https://github.com/verus-lang/verus.git", rev="f1040e17a5a5e5ab819083fb673e7e8abd37c00a" }
deps_hack = { path = "../deps_hack" }

[package.metadata.verus.ide]
extra_args = "--crate-type=lib --expand-errors -L dependency=../deps_hack/target/debug/deps --extern=deps_hack=../deps_hack/target/debug/libdeps_hack.rlib"

