[package]
name = "pmemlog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
builtin_macros = { git = "https://github.com/verus-lang/verus.git", rev="50d07b5fe4465fed8b76f4d050c945ba5dd17141" }
builtin = { git = "https://github.com/verus-lang/verus.git", rev="50d07b5fe4465fed8b76f4d050c945ba5dd17141" }
vstd = { git = "https://github.com/verus-lang/verus.git", rev="50d07b5fe4465fed8b76f4d050c945ba5dd17141" }
crc64fast = "1.0.0"
