[package]
name = "storage_node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
builtin_macros = { git = "https://github.com/verus-lang/verus.git", rev="50d07b5fe4465fed8b76f4d050c945ba5dd17141" }
builtin = { git = "https://github.com/verus-lang/verus.git", rev="50d07b5fe4465fed8b76f4d050c945ba5dd17141" }
vstd = { git = "https://github.com/verus-lang/verus.git", rev="50d07b5fe4465fed8b76f4d050c945ba5dd17141" }
deps_hack = { path = "../deps_hack" }

[package.metadata.verus.ide]
extra_args = "--crate-type=lib --expand-errors -L dependency=../deps_hack/target/release/deps --extern=deps_hack=../deps_hack/target/release/libdeps_hack.rlib"