[package]
name = "capybarakv"
version = "0.1.0"
edition = "2021"

[features]
## The "pmem" feature enables actual persistent memory libraries, such as
## PMDK on Linux.  Not enabling this feature is helpful when testing with
## memory-mapped files that are not backed by PMDK.  This feature enables
## the "pmem" feature in deps_hack, which links in PMDK.
pmem = [ "deps_hack/pmem" ]

## The "pmem" feature is enabled by default, but can be disabled; e.g.,
## to run tests without PMDK, run `cargo test --no-default-features`.
default = [ "pmem" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc64fast = "1.0.0"
rand = "0.8.5"
vstd = "0.0.0-2025-08-12-1837"
verus_builtin = "0.0.0-2025-08-12-1837"
verus_builtin_macros = "0.0.0-2025-08-12-1837"
deps_hack = { path = "../deps_hack", default-features = false }

[target.'cfg(target_family = "unix")'.dependencies]
memmap = "0.7.0"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ["cfg(verus_keep_ghost)"] }

[package.metadata.verus]
verify = true

[package.metadata.verus.ide]
extra_args = "--crate-type=lib --expand-errors -L dependency=../deps_hack/target/release/deps --extern=deps_hack=../deps_hack/target/release/libdeps_hack.rlib"
