[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
storage_node = { path = "../../storage_node/" }
pmsafe = { path = "../../pmsafe" }
builtin_macros = { git = "https://github.com/verus-lang/verus.git" }
builtin = { git = "https://github.com/verus-lang/verus.git" }
vstd = { git = "https://github.com/verus-lang/verus.git"}
toml = { version = "0.8.19", features = ["parse"] }
serde = { version = "1.0.215", features = ["derive"] }
chrono = "0.4.38"
redis = "0.27.5"
rand = "0.8.5"
#rocksdb = { path = "../rust-rocksdb/" }
num_cpus = "1.16.0"