[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
storage_node = { path = "../../storage_node/" }
pmcopy = { path = "../../pmcopy" }
builtin_macros = { git = "https://github.com/verus-lang/verus.git", rev = "cd8c9320616c1ddbf4e84256e0048903ae41508d" }
builtin = { git = "https://github.com/verus-lang/verus.git", rev = "cd8c9320616c1ddbf4e84256e0048903ae41508d" }
vstd = { git = "https://github.com/verus-lang/verus.git", rev = "cd8c9320616c1ddbf4e84256e0048903ae41508d" }
toml = { version = "0.8.19", features = ["parse"] }
serde = { version = "1.0.215", features = ["derive"] }
chrono = "0.4.38"
redis = "0.27.5"
rand = "0.8.5"
rocksdb = { path = "../rust-rocksdb/" }
num_cpus = "1.16.0"
nix = { version = "=0.29.0", features = ["fs"] }

[target.'cfg(target_os = "linux")'.build-dependencies]
bindgen = "0.69.1"

[build]
rustflags = "-Clink-arg=-Wl,--undefined-version"

[features]

mini = [] # feature has no explicit dependencies