[package]
name = "ycsb_ffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.21.1"
storage_node = { path = "../../storage_node/" }
pmcopy = { path = "../../pmcopy" }
builtin_macros = { git = "https://github.com/verus-lang/verus.git", rev="a53f39271666ac7dc9f455b6267da4c49a5f75c6" }
builtin = { git = "https://github.com/verus-lang/verus.git", rev="a53f39271666ac7dc9f455b6267da4c49a5f75c6" }
vstd = { git = "https://github.com/verus-lang/verus.git", rev="a53f39271666ac7dc9f455b6267da4c49a5f75c6" }
toml = { version = "0.8.19", features = ["parse"] }
serde = { version = "1.0.215", features = ["derive"] }
chrono = "0.4.38"

[lib]
crate_type = ["cdylib"]

[[bin]]
name = "ycsb_ffi"
path = "src/lib.rs"