[package]
name = "multilog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vstd = { git = "https://github.com/verus-lang/verus.git" }
deps_hack = { path = "../deps_hack", default-features = true }
pmsafe = { path = "../pmsafe" }

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ["cfg(verus_keep_ghost)"] }

[package.metadata.verus]
verify = true

[package.metadata.verus.ide]
extra_args = "--crate-type=lib --expand-errors -L dependency=../../deps_hack/target/release/deps --extern=deps_hack=../../deps_hack/target/release/libdeps_hack.rlib"
