[package]
name = "metadata_kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Avoid default features since @lopopolo reports that rand is unsound with both the log and thread_rng features
rand = { version = "0.10.1", default-features = false, features = [ "thread_rng" ] }
vstd = "0.0.0-2026-04-19-0121"
proptest = "1.4"
