[package]
name = "deps_hack"
version = "0.1.0"
edition = "2021"

[features]
## The "pmem" feature enables actual persistent memory libraries, such as
## PMDK on Linux.  Not enabling this feature is helpful when testing with
## memory-mapped files that are not backed by PMDK.
default = ["pmem"]
pmem = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc64fast = "1.0.0"
pmcopy = { path = "../pmcopy" }
rand = "0.8.5"
rsa = { version = "0.9.8", features = ["sha2"] }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["errhandlingapi", "fileapi", "handleapi", "memoryapi", "winbase", "winerror", "winnt"] }

[target.'cfg(target_os = "linux")'.dependencies]
nix = "0.27.1"

[target.'cfg(target_os = "linux")'.build-dependencies]
bindgen = "0.69.1"

[target.'cfg(target_family = "unix")'.dependencies]
memmap = "0.7.0"
